--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,6 +72,14 @@
           }
         ]
       }
+    },
+    {
+      "files": [
+        "*.ts"
+      ],
+      "extends": [
+        "plugin:@ngrx/recommended"
+      ]
     }
   ]
 }
