--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss": "^8.4.25",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
+    "schematics-scss-migrate": "^2.3.17",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.1.3"
   }
