--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-select/ng-option-highlight": "^0.0.7",
+    "@ng-select/ng-select": "^11.0.0",
     "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
     "rxjs": "~7.8.0",
