--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-select/ng-select": "^11.0.0",
     "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
